# PollutantSimulation

./: CMakeLists.txt  Libraries.cpp  README.md  compute_FG.cpp  compute_phi.cpp  compute_poisson.cpp  compute_uv.cpp  main.cpp  math_diff.cpp  test.cpp
2D/: Libraries.cpp  compute_phi.cpp  compute_poisson.cpp  main.cpp
2D/paraview/: result_0.vtk  result_10.vtk  result_100.vtk  result_1000.vtk  result_1005.vtk  result_1010.vtk  result_1015.vtk  result_1020.vtk  result_1025.vtk  result_1030.vtk  result_1035.vtk  result_1040.vtk  result_1045.vtk  result_105.vtk  result_1050.vtk  result_1055.vtk  result_1060.vtk  result_1065.vtk  result_1070.vtk  result_1075.vtk  result_1080.vtk  result_1085.vtk  result_1090.vtk  result_1095.vtk  result_110.vtk  result_1100.vtk  result_1105.vtk  result_1110.vtk  result_1115.vtk  result_1120.vtk  result_1125.vtk  result_1130.vtk  result_1135.vtk  result_1140.vtk  result_1145.vtk  result_115.vtk  result_1150.vtk  result_1155.vtk  result_1160.vtk  result_1165.vtk  (+961 more)
3D/: Libraries_3D.cpp  compute_FG.cpp  compute_FG_3D.cpp  compute_phi.cpp  compute_phi_3D.cpp  compute_poisson.cpp  compute_poisson_3D.cpp  compute_uv.cpp  compute_uv_3D.cpp  main3D.cpp  main_3D.cpp  math_diff.cpp  math_diff_3D.cpp
Plot/: Plot_boundary_thickness.m  Visualize.m
