cmake_minimum_required(VERSION 3.21)
project(PollutantSimulation)

set(CMAKE_CXX_STANDARD 14)
link_directories(2D,3D)
add_executable(PollutantSimulation 2D/main.cpp)
add_executable(3DSimulation 3D/main3D.cpp)
add_library(Libraries STATIC 2D/Libraries.cpp)
add_library(compute_FG STATIC 2D/compute_FG.cpp)
add_library(compute_poisson STATIC 2D/compute_poisson.cpp)
add_library(compute_uv STATIC 2D/compute_uv.cpp)
add_library(compute_phi STATIC 2D/compute_phi.cpp)
add_library(math_diff STATIC 2D/math_diff.cpp)

target_link_libraries(${PROJECT_NAME} compute_FG)
target_link_libraries(${PROJECT_NAME} compute_poisson)
target_link_libraries(${PROJECT_NAME} compute_uv)
target_link_libraries(${PROJECT_NAME} math_diff)
target_link_libraries(${PROJECT_NAME} compute_phi)
target_link_libraries(${PROJECT_NAME} Libraries)