cmake_minimum_required(VERSION 3.21)
project(PollutantSimulation)

set(CMAKE_CXX_STANDARD 14)
link_directories(2D,3D)
add_executable(PollutantSimulation 2D/main.cpp)

add_library(Libraries STATIC 2D/Libraries.cpp)
add_library(compute_FG STATIC 2D/compute_FG.cpp)
add_library(compute_poisson STATIC 2D/compute_poisson.cpp)
add_library(compute_uv STATIC 2D/compute_uv.cpp)
add_library(compute_phi STATIC 2D/compute_phi.cpp)
add_library(math_diff STATIC 2D/math_diff.cpp)

target_link_libraries(${PROJECT_NAME} compute_FG)
target_link_libraries(${PROJECT_NAME} compute_poisson)
target_link_libraries(${PROJECT_NAME} compute_uv)
target_link_libraries(${PROJECT_NAME} math_diff)
target_link_libraries(${PROJECT_NAME} compute_phi)
target_link_libraries(${PROJECT_NAME} Libraries)

add_executable(Simulation3D 3D/main_3D.cpp)
add_library(Libraries_3D STATIC 3D/Libraries_3D.cpp)
add_library(compute_FG_3D STATIC 3D/compute_FG_3D.cpp)
add_library(compute_poisson_3D STATIC 3D/compute_poisson_3D.cpp)
add_library(compute_uv_3D STATIC 3D/compute_uv_3D.cpp)
add_library(compute_phi_3D STATIC 3D/compute_phi_3D.cpp)
add_library(math_diff_3D STATIC 3D/math_diff_3D.cpp)

target_link_libraries(Simulation3D compute_FG_3D)
target_link_libraries(Simulation3D compute_poisson_3D)
target_link_libraries(Simulation3D compute_uv_3D)
target_link_libraries(Simulation3D math_diff_3D)
target_link_libraries(Simulation3D compute_phi_3D)
target_link_libraries(Simulation3D Libraries_3D)